--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <!--                     <p>
                         I received my graduate degree in <a href="https://minghsiehece.usc.edu/">Electrical Engineering</a> from <a href="https://www.usc.edu/">University of Southern California (USC)</a> and undergraduate degree in <a href="https://web.ee.ntu.edu.tw/">Electrical Engineering</a> from <a href="https://www.ntu.edu.tw/">National Taiwan University (NTU)</a> in 2013, respectively.  
                     </p> -->
-                    <p style="color:red;">
+<!--                     <p style="color:red;">
                         &#11088; We are actively recruiting <strong>full-time research scientists / interns</strong> at <a href="https://research.nvidia.com/labs/twn/">NVIDIA Research Taiwan</a>. Please drop me an email at <a href="mailto:chienyiwang0922@gmail.com">chienyiwang0922@gmail.com</a> if you are interested. 
-                    </p>
+                    </p> -->
                     
                     <p style="text-align:center">
                     <a href="mailto:chienyiwang0922@gmail.com">Email</a> &nbsp;/&nbsp;
