--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jan. 2025] Two papers are accepted at <a href="https://iclr.cc/Conferences/2025">ICLR 2025</a>. </li>
                 <li> [Nov. 2024] I joined Amazon Ring as an Applied Scientist. </li>
                 <li> [Jun. 2024] "BOFormer" is accepted at <a href="https://autorlworkshop.github.io/">ICML 2024 AutoRL workshop</a> as a Spotlight paper!</li>
                 <li> [May. 2024] "DoRA" is accepted at <a href="https://icml.cc/Conferences/2024/Dates">ICML 2024</a> as an Oral paper!.
@@ -110,14 +111,16 @@
                 <br>
                 <a href="https://pinghsieh.github.io/group.html">Yu Heng Hung</a>, 
                 <a href="https://pinghsieh.github.io/group.html">Kai-Jie Lin</a>, 
-                <a href="https://pinghsieh.github.io/group.html">Yu-Heng Lin</a>,  
+                <a href="https://pinghsieh.github.io/group.html">Yu-Heng Lin</a>,
+                <a href="https://sunset1995.github.io/">Cheng Sun</a>,
                 <strong>Chien-Yi Wang*</strong>, 
                 <a href="https://pinghsieh.github.io/">Ping-Chun Hsieh*</a>
                 &nbsp (*=equal advising)
                 <br>
                 <em>International Conference on Machine Learning (ICML) AutoRL Workshop</em>, 2024 &nbsp <font color="red"><strong>(Spotlight)</strong></font>
+                <em>International Conference on Learning Representations (ICLR) </em>, 2025 &nbsp
                 <br>
-                <a href="https://openreview.net/forum?id=ShXsJ1EGWK">OpenReview</a>
+                <a href="https://openreview.net/forum?id=UnCKU8pZVe">OpenReview</a>
                 <p></p>
                 <p>
                 we present a generalized deep Q-learning framework and propose BOFormer, which substantiates the framework for Multi-Objective Bayesian Optimization (MOBO) via sequence modeling.
